refactor(shop): refactorizado